# MicroBrewForYou

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
microbrewforyou/: apps.py
microbrewforyou_app/: admin.py  apps.py  forms.py  models.py  views.py
microbrewforyou_app/management/commands/: brew_list_loop.py
microbrewforyou_app/migrations/: 0001_initial.py  0002_auto_20201006_1511.py  0002_auto_20201016_1623.py  0003_auto_20201006_1529.py  0004_remove_customuser_name.py  0005_auto_20201007_0259.py  0006_auto_20201007_0314.py  0007_auto_20201007_0326.py  0008_auto_20201008_1313.py  0009_auto_20201008_1727.py  0010_auto_20201012_1622.py  0010_like.py  0011_auto_20201015_1805.py  0011_brewtypes_img_upload.py
microbrewforyou_server/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
templates/: 403.html  404.html  500.html  add_post.html  all_posts.html  base.html  base2.html  beer_words.html  brew_type_list.html  brewery_detail.html  edit_post.html  edit_user.html  favorite_brew_type.html  favorite_breweries.html  friends_following_section.html  generic_form.html  home_header.html  home_header_secondary.html  index.html  login.html  menu.html  nearby_breweries.html  post_detail.html  sign_up.html  suggested_friends_posts.html  user_detail.html  user_posts.html
