[tool.poetry]
name = "microbrewforyou"
version = "0.1.0"
description = "Capstone project. Microbrew for You!"
authors = ["Mavrick Watts, Mike Boring, Iris Hoffmeyer, Ally Engle"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
django-crispy-forms = "^1.9.2"
Pillow = "^7.2.0"
flake8 = "^3.8.4"
requests = "^2.24.0"
django-environ = "^0.4.5"
environ = "^1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

